--- a/assign_mlv2.html
+++ b/assign_mlv2.html
@@ -126,7 +126,7 @@ $(document).ready(function () {
 </div>
 <div id="cleaning-data" class="section level2">
 <h2>Cleaning Data</h2>
-<p>We have two files: ‘trainning’ and ‘test’ downloaded from the url <a href="https://d396qusza40orc.cloudfront.net" class="uri">https://d396qusza40orc.cloudfront.net</a>. We perform our analysis from file ‘trainning’ and after that we will apply our best method on file test. Initialy we have <code>{r} print dime[1]</code> records and <code>{r} print dime[2]</code></p>
+<p>We have two files: ‘trainning’ and ‘test’ downloaded from the url <a href="https://d396qusza40orc.cloudfront.net" class="uri">https://d396qusza40orc.cloudfront.net</a>. We perform our analysis from file ‘trainning’ and after that we will apply our best method on file test.</p>
 <p>After having a glance of the information we discovered that some variables don’t have reliable information sucha as NA, #DIV/0, etc. So we need to remove from our analysis reducing the number of variables.</p>
 <pre><code>## [1] 19622    57</code></pre>
 </div>
@@ -150,37 +150,37 @@ confusionMatrix(prediction, dtesting$classe)</code></pre>
 ## 
 ##           Reference
 ## Prediction    A    B    C    D    E
-##          A 2155   55    6    2    0
-##          B   59 1313  140   59    0
-##          C   18  141 1197  146   57
-##          D    0    9   17  899   91
-##          E    0    0    8  180 1294
+##          A 2150   69    9    3    0
+##          B   65 1279  141   72    0
+##          C   17  159 1199  208   61
+##          D    0   11   12  794   79
+##          E    0    0    7  209 1302
 ## 
 ## Overall Statistics
 ##                                           
-##                Accuracy : 0.8741          
-##                  95% CI : (0.8665, 0.8813)
+##                Accuracy : 0.857           
+##                  95% CI : (0.8491, 0.8647)
 ##     No Information Rate : 0.2845          
 ##     P-Value [Acc &gt; NIR] : &lt; 2.2e-16       
 ##                                           
-##                   Kappa : 0.8407          
+##                   Kappa : 0.819           
 ##  Mcnemar's Test P-Value : NA              
 ## 
 ## Statistics by Class:
 ## 
 ##                      Class: A Class: B Class: C Class: D Class: E
-## Sensitivity            0.9655   0.8650   0.8750   0.6991   0.8974
-## Specificity            0.9888   0.9592   0.9441   0.9822   0.9706
-## Pos Pred Value         0.9716   0.8358   0.7678   0.8848   0.8731
-## Neg Pred Value         0.9863   0.9673   0.9728   0.9433   0.9767
+## Sensitivity            0.9633   0.8426   0.8765   0.6174   0.9029
+## Specificity            0.9856   0.9561   0.9313   0.9845   0.9663
+## Pos Pred Value         0.9637   0.8215   0.7293   0.8862   0.8577
+## Neg Pred Value         0.9854   0.9620   0.9728   0.9292   0.9779
 ## Prevalence             0.2845   0.1935   0.1744   0.1639   0.1838
-## Detection Rate         0.2747   0.1673   0.1526   0.1146   0.1649
-## Detection Prevalence   0.2827   0.2002   0.1987   0.1295   0.1889
-## Balanced Accuracy      0.9771   0.9121   0.9096   0.8406   0.9340</code></pre>
+## Detection Rate         0.2740   0.1630   0.1528   0.1012   0.1659
+## Detection Prevalence   0.2843   0.1984   0.2095   0.1142   0.1935
+## Balanced Accuracy      0.9744   0.8993   0.9039   0.8009   0.9346</code></pre>
 </div>
 <div id="model-2---random-forest" class="section level2">
 <h2>Model 2 - Random Forest</h2>
-<p>Our second model is Random Forest, following the same process, with this model we improve our accuracy.</p>
+<p>Our second model is Random Forest, following the same process.</p>
 <pre class="r"><code>set.seed(123456)
 modfit2 &lt;- randomForest(classe~. , data=dtrainning, type=&quot;class&quot;)
 modfit2</code></pre>
@@ -191,53 +191,51 @@ modfit2</code></pre>
 ##                      Number of trees: 500
 ## No. of variables tried at each split: 7
 ## 
-##         OOB estimate of  error rate: 0.19%
+##         OOB estimate of  error rate: 0.15%
 ## Confusion matrix:
-##      A    B    C    D    E  class.error
-## A 3347    1    0    0    0 0.0002986858
-## B    4 2275    0    0    0 0.0017551558
-## C    0    5 2047    2    0 0.0034079844
-## D    0    0    6 1922    2 0.0041450777
-## E    0    0    0    2 2163 0.0009237875</code></pre>
+##      A    B    C    D    E class.error
+## A 3348    0    0    0    0 0.000000000
+## B    2 2276    1    0    0 0.001316367
+## C    0    6 2046    2    0 0.003894839
+## D    0    0    4 1926    0 0.002072539
+## E    0    0    0    3 2162 0.001385681</code></pre>
 <pre class="r"><code>prediction2&lt;- predict(modfit2, newdata=dtesting)
 confusionMatrix(prediction2, dtesting$classe)</code></pre>
 <pre><code>## Confusion Matrix and Statistics
 ## 
 ##           Reference
 ## Prediction    A    B    C    D    E
-##          A 2232    2    0    0    0
-##          B    0 1516    3    0    0
-##          C    0    0 1362    3    0
-##          D    0    0    3 1283    1
-##          E    0    0    0    0 1441
+##          A 2230    1    0    0    0
+##          B    2 1517    0    0    0
+##          C    0    0 1368   11    0
+##          D    0    0    0 1275    4
+##          E    0    0    0    0 1438
 ## 
 ## Overall Statistics
 ##                                           
-##                Accuracy : 0.9985          
-##                  95% CI : (0.9973, 0.9992)
+##                Accuracy : 0.9977          
+##                  95% CI : (0.9964, 0.9986)
 ##     No Information Rate : 0.2845          
 ##     P-Value [Acc &gt; NIR] : &lt; 2.2e-16       
 ##                                           
-##                   Kappa : 0.9981          
+##                   Kappa : 0.9971          
 ##  Mcnemar's Test P-Value : NA              
 ## 
 ## Statistics by Class:
 ## 
 ##                      Class: A Class: B Class: C Class: D Class: E
-## Sensitivity            1.0000   0.9987   0.9956   0.9977   0.9993
-## Specificity            0.9996   0.9995   0.9995   0.9994   1.0000
-## Pos Pred Value         0.9991   0.9980   0.9978   0.9969   1.0000
-## Neg Pred Value         1.0000   0.9997   0.9991   0.9995   0.9998
+## Sensitivity            0.9991   0.9993   1.0000   0.9914   0.9972
+## Specificity            0.9998   0.9997   0.9983   0.9994   1.0000
+## Pos Pred Value         0.9996   0.9987   0.9920   0.9969   1.0000
+## Neg Pred Value         0.9996   0.9998   1.0000   0.9983   0.9994
 ## Prevalence             0.2845   0.1935   0.1744   0.1639   0.1838
-## Detection Rate         0.2845   0.1932   0.1736   0.1635   0.1837
-## Detection Prevalence   0.2847   0.1936   0.1740   0.1640   0.1837
-## Balanced Accuracy      0.9998   0.9991   0.9976   0.9985   0.9997</code></pre>
+## Detection Rate         0.2842   0.1933   0.1744   0.1625   0.1833
+## Detection Prevalence   0.2843   0.1936   0.1758   0.1630   0.1833
+## Balanced Accuracy      0.9995   0.9995   0.9992   0.9954   0.9986</code></pre>
 </div>
 <div id="conclusions" class="section level2">
 <h2>Conclusions</h2>
-</div>
-<div id="appendix-i" class="section level2">
-<h2>APPENDIX I</h2>
+<p>With Random Forest method we can achieve better levels of accuracy. We will use in our predictions.</p>
 </div>
 
 
